# cpp-container-optimization-tutorial

./: .gitignore  CONTRIBUTING.md  Gemfile  LESSONS-LEARNED.md  LICENSE  PRD.md  README.md  STARTING-WITH-CLAUDE.md  _config.yml  bibliography.html  diagrams.html  examples.html  index.html  pre-pull.sh  verify-stacks.sh
.github/workflows/: demos.yml  pages.yml
_docs/: 00-outline.md  01-prerequisites.md  02-introduction.md  03-image-strategy.md  03-raii-discipline.md  04-compile-time-wins.md  04-image-strategy.md  05-compile-time-wins.md  05-stl-layout.md  06-memory-management.md  06-stl-layout.md  07-io-latency.md  07-memory-management.md  08-io-latency.md  08-networking-kernel.md  09-networking-kernel.md  09-observability-profiling.md  10-noisy-neighbors.md  10-observability-profiling.md  11-analysis-debugging.md  11-noisy-neighbors.md  12-analysis-debugging.md  12-reproducibility-abi.md  13-pitfalls.md  13-reproducibility-abi.md  14-pitfalls.md  14-where-to-go-next.md  15-where-to-go-next.md  16-appendix-a-conan-ubi9-perl.md
_examples/: demo-01-image-strategy.md  demo-02-stl-layout.md  demo-03-io-uring-grpc.md  demo-04-observability.md  demo-05-isolation.md  demo-06-memory-and-allocators.md  demo-07-quality-pipeline.md
_includes/: diagram-card.html  excalidraw.html  footer.html  header.html  section.html
_layouts/: default.html  example.html  plan.html  tutorial.html
_plans/: backlog.md  reconciliation-plan.md  teaching-points.md
_reference/statelessness/: 00-index.md  01-deployment-posture.md  02-raii.md  03-pmr.md  04-process-scoped-state.md  05-threading.md  06-twelve-factor.md  07-state-externalization.md  08-ephemeral-filesystem.md  09-health-checks.md  10-grpc-microservices.md  11-build-tooling.md  research-notes.md
assets/css/: site.css
assets/diagrams/: 01-prerequisites-toolchain.excalidraw  02-introduction-four-layers.excalidraw  04-compile-time-pgo-flow.excalidraw  05-stl-layout-flat-vs-node.excalidraw  08-networking-veth-vs-host.excalidraw  10-isolation-cgroup-tree.excalidraw  README.md
diagrams/: 01-prerequisites-toolchain.excalidraw  02-introduction-four-layers.excalidraw  02-threading-models.excalidraw  03-image-strategy-multistage.excalidraw  03-raii-discipline.excalidraw  04-image-strategy-multistage.excalidraw  05-compile-time-pgo-flow.excalidraw  06-allocator-stack.excalidraw  06-stl-layout-flat-vs-node.excalidraw  07-allocator-stack.excalidraw  08-io-uring-rings.excalidraw  09-networking-veth-vs-host.excalidraw  10-observability-otel-stack.excalidraw  11-isolation-cgroup-tree.excalidraw  12-debug-sidecar-pattern.excalidraw  13-reproducibility-conan-flow.excalidraw  14-pitfalls-avx512-mismatch.excalidraw  README.md
diagrams/statelessness/: 01-deployment-posture.excalidraw  02-raii.excalidraw  03-pmr.excalidraw  04-process-scoped-state.excalidraw  05-threading.excalidraw  (+6 more)
examples/demo-01-image-strategy/: CMakeLists.txt  CMakePresets.json  Containerfile.pgo  Containerfile.scratch-static  Containerfile.single-stage-naive  Containerfile.ubi-micro  Containerfile.ubi-micro-glibc-mismatch  Containerfile.ubi-multistage  README.md  conanfile.txt  demo.sh
examples/demo-01-image-strategy/src/: main.cpp
examples/demo-02-memory-and-stl/: CMakeLists.txt  Containerfile  README.md  demo.sh
examples/demo-02-memory-and-stl/src/: main.cpp
examples/demo-02-stl-layout/: CMakeLists.txt  Containerfile  README.md  conanfile.py  demo.sh  results-baseline.json  results-pressured.json
examples/demo-02-stl-layout/src/: main.cpp
examples/demo-03-io-uring-grpc/: CMakeLists.txt  Containerfile  README.md  compose.production.yml  compose.yml  conanfile.py  demo.sh
examples/demo-03-io-uring-grpc/proto/: echo.proto
examples/demo-03-io-uring-grpc/security/: README.md  build-seccomp-profile.sh  demo03_iouring.fc  demo03_iouring.te  install-selinux-policy.sh  seccomp-iouring.json  uninstall-selinux-policy.sh
examples/demo-03-io-uring-grpc/src/: echo.proto  echo_uring.cpp  grpc_async_server.cpp  main.cpp  tcp_loadgen.cpp
examples/demo-04-observability/: CMakeLists.txt  Containerfile  README.md  compose.yml  conanfile.py  conanfile.txt  demo.sh
examples/demo-04-observability/bpftrace/: sched_switch.bt
examples/demo-04-observability/src/: main.cpp
examples/demo-05-isolation/: CMakeLists.txt  Containerfile  README.md  demo.sh
examples/demo-05-isolation/results/: baseline.txt  pinned.txt  unisolated.txt  weighted.txt
examples/demo-05-isolation/src/: main.cpp
examples/demo-06-memory-and-allocators/: CMakeLists.txt  Containerfile  README.md  compose-observe.yml  compose-serve.yml  conanfile.py  demo.sh  run-all.sh
examples/demo-06-memory-and-allocators/src/: main.cpp  workload.cpp  workload.hpp
examples/demo-07-quality-pipeline/: CMakeLists.txt  CMakePresets.json  Containerfile  README.md  compose.debug.yml  conanfile.py  demo.sh
examples/demo-07-quality-pipeline/abi-reference/: README.md
examples/demo-07-quality-pipeline/reports/: clang-tidy.txt
examples/demo-07-quality-pipeline/src/include/demo07/: channel.hpp
examples/demo-07-quality-pipeline/src/lib/: channel.cpp
examples/demo-07-quality-pipeline/src/svc/: main.cpp
examples/demo-07-quality-pipeline/tests/: test_channel.cpp
observability/: compose.yml  otel-collector.yaml
onboarding/: GETTING-STARTED.md  PUSHING-TO-GITHUB.md  README.md  STARTING-WITH-CLAUDE.md
presentation/: README.md  build-notes.md  cpp-container-tutorial.pptx
reference/: statelessness.html
scripts/: cgroup-delegation.sh  check-host.sh  check-liquid.py  pre-pull.sh  regen-examples-collection.sh  regenerate-demo-03-lockfile.sh  regenerate-demo-04-lockfile.sh  teardown.sh  test-all-demos.sh  test-demo-01-image-strategy.sh  test-demo-02-memory-and-stl.sh  test-demo-02-stl-layout.sh  test-demo-03-io-uring-grpc.sh  test-demo-03-production.sh  test-demo-04-observability.sh  test-demo-05-isolation.sh  test-demo-06-memory-and-allocators.sh  test-demo-06-quality-pipeline.sh  test-demo-07-quality-pipeline.sh  test-template.sh  verify-stacks.sh
tools/: build-deck.sh  build-pptx.py  requirements.txt  sections.py
(+19 files in other folders)
